fixing lightbox alignment

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,6 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
-  align-content: center;
   transition-duration: 500ms;
   -webkit-transition-duration: 500ms;
   @starting-style {
@@ -64,6 +63,8 @@
     max-width: 90%;
     width: fit-content;
     margin: 0 auto;
+    margin-top: 50dvh;
+    transform: translateY(-50%);
     box-sizing: border-box;
     transition-duration: 500ms;
     -webkit-transition-duration: 500ms;
